# City3D

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Parameters.md  README.md  ReadMe.md  conanfile.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-push-image.yaml  cmake-build.yml  test-build-gcc.yml
City3D/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  paint_canvas.cpp  paint_canvas.h
City3D/Resources/: City3D.qrc  City3D.rc  FootPrint.qrc  FootPrint.rc
City3D/dlg/: weight_panel_click.cpp  weight_panel_click.h  weight_panel_manual.cpp  weight_panel_manual.ui  wgt_render.cpp  wgt_render.h
Example/: CMakeLists.txt
Example1/: CMakeLists.txt  main.cpp
basic/: CMakeLists.txt  attribute_adapter.h  attribute_serializer.h  attribute_store.h  basic_types.h  file_utils.h  logger.cpp  logger.h  progress.h  raw_attribute_store.h  stop_watch.h
cmake/: FindGUROBI.cmake
code/: CMakeLists.txt
code/CLI_Example_1/: CMakeLists.txt  main.cpp
code/CLI_Example_2/: CMakeLists.txt  main.cpp
code/City3D/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  paint_canvas.cpp  paint_canvas.h
code/City3D/Resources/: City3D.icns  City3D.qrc
code/City3D/dlg/: weight_panel_click.cpp  weight_panel_manual.cpp  weight_panel_manual.ui  wgt_render.cpp  wgt_render.ui
code/Example2/: CMakeLists.txt  building_instance.cpp
code/basic/: CMakeLists.txt  assertions.h  attribute_life_cycle.h  basic_types.cpp  basic_types.h  counted.h  file_utils.cpp  file_utils.h  generic_attributes_io.h  input_parser.h  logger.cpp  rat.h  record_id.h
code/city3d_cli/: CMakeLists.txt  main.cpp
code/cmake/: FindGUROBI.cmake  UseQt5.cmake
code/math/: CMakeLists.txt  line.h  linear_program_solver.h  linear_program_solver_GUROBI.cpp  math_types.cpp  math_types.h  plane.h  semi_definite_symmetric_eigen.h  vecg.h
code/method/: CMakeLists.txt  Polygonize.cpp  Polygonize.h  alpha_shape.h  alpha_shape_CGAL5_4.h  alpha_shape_boundary.cpp  alpha_shape_boundary.h  alpha_shape_mesh.cpp  alpha_shape_mesh.h  face_selection.h  face_selection_optimization.cpp  hypothesis_generator.cpp  hypothesis_generator.h  intersection_area.h  method_global.cpp  method_global.h  otr2_edge_simplify.cpp  otr2_edge_simplify.h  point_set_normals.cpp  point_set_region_growing.cpp  point_set_region_growing.h  polyfit_info.cpp  polyfit_info.h  reconstruction.cpp  reconstruction.h  regularize_polygon.cpp
code/method/OTR_2/: Reconstruction_triangulation_2.h
code/model/: CMakeLists.txt  map_editor.cpp  map_enumerator.cpp  map_enumerator.h  map_geometry.cpp  map_geometry.h  map_io.cpp  map_io.h  map_serializer.cpp  map_serializer_json.cpp  map_serializer_json.h  map_serializer_obj.cpp  model.h  point_set_geometry.h  point_set_io.cpp  point_set_serializer_las.cpp  point_set_serializer_vg.cpp  prism.h
code/renderer/: CMakeLists.txt  opengl_info.h  point_set_render.cpp  rendering_styles.h  tessellator.cpp  tessellator.h
data/: 001.ply
data/building_instances/: 0.ply  1.ply  10.ply  11.ply  12.ply  13.ply  14.ply  15.ply  16.ply  17.ply  18.ply  19.ply  2.ply  20.ply  21.ply  22.ply  23.ply  24.ply  25.ply  26.ply  27.ply  28.ply  29.ply  3.ply  30.ply  31.ply  32.ply  33.ply  34.ply  35.ply  36.ply  37.ply  38.ply  39.ply  4.ply  40.ply  41.ply  42.ply  43.ply  44.ply  (+60 more)
math/: CMakeLists.txt  box.h  compare.h  line.h  linear_program.h  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_GUROBI.cpp  linear_program_solver_SCIP.cpp  math_common.h  math_types.cpp  math_types.h  oriented_line.h  polygon2d.h  polygon3d.h  principal_axes.cpp  principal_axes.h  vecg.h
method/: CMakeLists.txt  Modified_Otr2.h  alpha_shape.h  alpha_shape_boundary.cpp  alpha_shape_boundary.h  alpha_shape_mesh.cpp  alpha_shape_mesh.h  cgal_types.h  dbscan.h  face_selection.cpp  face_selection.h  face_selection_optimization.cpp  hypothesis_generator.cpp  hypothesis_generator.h  intersection_area.h  method_global.cpp  method_global.h  otr2_edge_simplify.cpp  point_set_normals.cpp  point_set_normals.h  point_set_region_growing.h  polyfit_info.cpp  polyfit_info.h  reconstruction.cpp  reconstruction.h  regularize_polygon.cpp  regularize_polygon.h
method/OTR_2/: Reconstruction_triangulation_2.h  Reconstruction_vertex_base_2.h
model/: CMakeLists.txt  map.h  map_builder.h  map_cells.cpp  map_cells.h  map_circulators.h  map_copier.h  map_editor.h  map_geometry.h  map_serializer_json.cpp  map_serializer_json.h  model.h  model_common.h  point_set.cpp  point_set.h  point_set_geometry.cpp  point_set_geometry.h  point_set_io.cpp  point_set_io.h  point_set_serializer_las.cpp  point_set_serializer_las.h  point_set_serializer_ply.cpp  point_set_serializer_ply.h  point_set_serializer_vg.cpp  point_set_serializer_vg.h  prism.h  vertex_group.h
renderer/: CMakeLists.txt  mesh_render.cpp  mesh_render.h  opengl_info.cpp  opengl_info.h  point_set_render.cpp  point_set_render.h  renderer_common.h  rendering_styles.h  tessellator.h
src/: main.cpp
src/basic/: CMakeLists.txt  attribute_manager.h  canvas.h  file_utils.h  input_parser.cpp  stop_watch.cpp  stop_watch.h
src/math/: CMakeLists.txt  linear_program.h  linear_program_solver.cpp  linear_program_solver.h  oriented_line.h  polygon3d.cpp  polygon3d.h  principal_axes.h
src/method/: CMakeLists.txt  Modified_Otr2.h  alpha_shape_boundary.h  alpha_shape_mesh.cpp  dbscan.h  face_selection.cpp  face_selection.h  face_selection_optimization.cpp  otr2_edge_simplify.cpp  otr2_edge_simplify.h  point_set_region_growing.cpp  reconstruction.cpp  reconstruction.h  regularize_polygon.h
src/method/OTR_2/: Reconstruction_face_base_2.h
src/model/: CMakeLists.txt  kdtree_search.h  map_builder.h  map_copier.cpp  map_io.cpp  map_serializer.h  map_serializer_json.cpp  map_serializer_obj.h  point_set_io.cpp  point_set_serializer_las.cpp  prism.cpp
src/model/kdtree/: vector2D.h
